@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -19,28 +19,32 @@
 package org.apache.pulsar.broker.service.plugin;
 
 import static org.apache.pulsar.broker.BrokerTestUtil.spyWithClassAndConstructorArgs;
+import static org.apache.pulsar.broker.BrokerTestUtil.spyWithClassAndConstructorArgsRecordingInvocations;
+import static org.apache.pulsar.client.api.SubscriptionInitialPosition.Earliest;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 import static org.testng.AssertJUnit.assertEquals;
 import static org.testng.AssertJUnit.assertNotNull;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import java.lang.reflect.Field;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
-
 import lombok.extern.slf4j.Slf4j;
+import org.apache.bookkeeper.mledger.Entry;
 import org.apache.bookkeeper.mledger.impl.PositionImpl;
-import org.apache.pulsar.broker.service.AbstractBaseDispatcher;
 import org.apache.pulsar.broker.service.AbstractTopic;
-import org.apache.pulsar.broker.service.BrokerService;
 import org.apache.pulsar.broker.service.BrokerTestBase;
 import org.apache.pulsar.broker.service.Dispatcher;
+import org.apache.pulsar.broker.service.EntryFilterSupport;
 import org.apache.pulsar.broker.service.persistent.PersistentSubscription;
+import org.apache.pulsar.broker.service.persistent.PersistentTopic;
 import org.apache.pulsar.client.api.Consumer;
 import org.apache.pulsar.client.api.Message;
 import org.apache.pulsar.client.api.Producer;
@@ -48,7 +52,9 @@ import org.apache.pulsar.client.api.Schema;
 import org.apache.pulsar.client.api.SubscriptionType;
 import org.apache.pulsar.client.impl.MessageIdImpl;
 import org.apache.pulsar.common.nar.NarClassLoader;
+import org.apache.pulsar.common.stats.AnalyzeSubscriptionBacklogResult;
 import org.awaitility.Awaitility;
+import org.testng.Assert;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
@@ -68,6 +74,78 @@ public class FilterEntryTest extends BrokerTestBase {
         internalCleanup();
     }
 
+    @Test
+    public void testOverride() throws Exception {
+        conf.setAllowOverrideEntryFilters(true);
+        String topic = "persistent://prop/ns-abc/topic" + UUID.randomUUID();
+        String subName = "sub";
+        Producer<String> producer = pulsarClient.newProducer(Schema.STRING)
+                .enableBatching(false).topic(topic).create();
+        for (int i = 0; i < 10; i++) {
+            producer.send("test");
+        }
+
+        PersistentTopic topicRef = (PersistentTopic) pulsar.getBrokerService()
+                .getTopicReference(topic).get();
+
+        // set topic level entry filters
+        EntryFilterWithClassLoader mockFilter = mock(EntryFilterWithClassLoader.class);
+        when(mockFilter.filterEntry(any(Entry.class), any(FilterContext.class))).thenReturn(
+                EntryFilter.FilterResult.REJECT);
+        Map<String, EntryFilterWithClassLoader> entryFilters = Map.of("key", mockFilter);
+
+        Field field = topicRef.getClass().getSuperclass().getDeclaredField("entryFilters");
+        field.setAccessible(true);
+        field.set(topicRef, entryFilters);
+
+        EntryFilterWithClassLoader mockFilter1 = mock(EntryFilterWithClassLoader.class);
+        when(mockFilter1.filterEntry(any(Entry.class), any(FilterContext.class))).thenReturn(
+                EntryFilter.FilterResult.ACCEPT);
+        Map<String, EntryFilterWithClassLoader> entryFilters1 = Map.of("key2", mockFilter1);
+        Field field2 = pulsar.getBrokerService().getClass().getDeclaredField("entryFilters");
+        field2.setAccessible(true);
+        field2.set(pulsar.getBrokerService(), entryFilters1);
+
+        Consumer<String> consumer = pulsarClient.newConsumer(Schema.STRING).topic(topic)
+                .subscriptionInitialPosition(Earliest)
+                .subscriptionName(subName).subscribe();
+
+        int counter = 0;
+        while (true) {
+            Message<String> message = consumer.receive(1, TimeUnit.SECONDS);
+            if (message != null) {
+                counter++;
+                consumer.acknowledge(message);
+            } else {
+                break;
+            }
+        }
+        // All normal messages can be received
+        assertEquals(0, counter);
+
+
+        conf.setAllowOverrideEntryFilters(false);
+        consumer.close();
+        consumer = pulsarClient.newConsumer(Schema.STRING).topic(topic)
+                .subscriptionInitialPosition(Earliest)
+                .subscriptionName(subName + "1").subscribe();
+        int counter1 = 0;
+        while (true) {
+            Message<String> message = consumer.receive(1, TimeUnit.SECONDS);
+            if (message != null) {
+                counter1++;
+                consumer.acknowledge(message);
+            } else {
+                break;
+            }
+        }
+        // All normal messages can be received
+        assertEquals(10, counter1);
+        conf.setAllowOverrideEntryFilters(false);
+        consumer.close();
+    }
+
+    @Test
     public void testFilter() throws Exception {
         Map<String, String> map = new HashMap<>();
         map.put("1","1");
@@ -76,25 +154,31 @@ public class FilterEntryTest extends BrokerTestBase {
         String subName = "sub";
         Consumer<String> consumer = pulsarClient.newConsumer(Schema.STRING).topic(topic)
                 .subscriptionProperties(map)
+                .isAckReceiptEnabled(true)
                 .subscriptionName(subName).subscribe();
         // mock entry filters
         PersistentSubscription subscription = (PersistentSubscription) pulsar.getBrokerService()
                 .getTopicReference(topic).get().getSubscription(subName);
         Dispatcher dispatcher = subscription.getDispatcher();
-        Field field = AbstractBaseDispatcher.class.getDeclaredField("entryFilters");
+        Field field = EntryFilterSupport.class.getDeclaredField("entryFilters");
         field.setAccessible(true);
+        Field hasFilterField = EntryFilterSupport.class.getDeclaredField("hasFilter");
+        hasFilterField.setAccessible(true);
         NarClassLoader narClassLoader = mock(NarClassLoader.class);
         EntryFilter filter1 = new EntryFilterTest();
-        EntryFilterWithClassLoader loader1 = spyWithClassAndConstructorArgs(EntryFilterWithClassLoader.class, filter1, narClassLoader);
+        EntryFilterWithClassLoader loader1 = spyWithClassAndConstructorArgsRecordingInvocations(EntryFilterWithClassLoader.class, filter1, narClassLoader);
         EntryFilter filter2 = new EntryFilter2Test();
-        EntryFilterWithClassLoader loader2 = spyWithClassAndConstructorArgs(EntryFilterWithClassLoader.class, filter2, narClassLoader);
-        field.set(dispatcher, ImmutableList.of(loader1, loader2));
+        EntryFilterWithClassLoader loader2 = spyWithClassAndConstructorArgsRecordingInvocations(EntryFilterWithClassLoader.class, filter2, narClassLoader);
+        field.set(dispatcher, List.of(loader1, loader2));
+        hasFilterField.set(dispatcher, true);
 
         Producer<String> producer = pulsarClient.newProducer(Schema.STRING)
                 .enableBatching(false).topic(topic).create();
         for (int i = 0; i < 10; i++) {
             producer.send("test");
         }
+
+        verifyBacklog(topic, subName, 10, 10, 10, 10, 0, 0, 0, 0);
 
         int counter = 0;
         while (true) {
@@ -108,10 +192,28 @@ public class FilterEntryTest extends BrokerTestBase {
         }
         // All normal messages can be received
         assertEquals(10, counter);
+
+        verifyBacklog(topic, subName, 0, 0, 0, 0, 0, 0, 0, 0);
+
+        // stop the consumer
+        consumer.close();
+
         MessageIdImpl lastMsgId = null;
         for (int i = 0; i < 10; i++) {
             lastMsgId = (MessageIdImpl) producer.newMessage().property("REJECT", "").value("1").send();
         }
+
+        // analyze the subscription and predict that
+        // 10 messages will be rejected by the filter
+        verifyBacklog(topic, subName, 10, 10, 0, 0, 10, 10, 0, 0);
+
+        consumer = pulsarClient.newConsumer(Schema.STRING)
+                .topic(topic)
+                .isAckReceiptEnabled(true)
+                .subscriptionProperties(map)
+                .subscriptionName(subName)
+                .subscribe();
+
         counter = 0;
         while (true) {
             Message<String> message = consumer.receive(1, TimeUnit.SECONDS);
@@ -124,6 +226,10 @@ public class FilterEntryTest extends BrokerTestBase {
         }
         // REJECT messages are filtered out
         assertEquals(0, counter);
+
+        // now the Filter acknoledged the messages on behalf of the Consumer
+        // backlog is now zero again
+        verifyBacklog(topic, subName, 0, 0, 0, 0, 0, 0, 0, 0);
 
         // All messages should be acked, check the MarkDeletedPosition
         assertNotNull(lastMsgId);
@@ -155,10 +261,12 @@ public class FilterEntryTest extends BrokerTestBase {
         producer.close();
         consumer.close();
 
-        BrokerService brokerService = pulsar.getBrokerService();
-        Field field1 = BrokerService.class.getDeclaredField("entryFilters");
+        PersistentTopic topicRef = (PersistentTopic) pulsar.getBrokerService()
+                .getTopicReference(topic).get();
+        Field field1 = topicRef.getClass().getSuperclass().getDeclaredField("entryFilters");
         field1.setAccessible(true);
-        field1.set(brokerService, ImmutableMap.of("1", loader1, "2", loader2));
+        field1.set(topicRef, Map.of("1", loader1, "2", loader2));
+
         cleanup();
         verify(loader1, times(1)).close();
         verify(loader2, times(1)).close();
@@ -180,14 +288,17 @@ public class FilterEntryTest extends BrokerTestBase {
             PersistentSubscription subscription = (PersistentSubscription) pulsar.getBrokerService()
                     .getTopicReference(topic).get().getSubscription(subName);
             Dispatcher dispatcher = subscription.getDispatcher();
-            Field field = AbstractBaseDispatcher.class.getDeclaredField("entryFilters");
+            Field field = EntryFilterSupport.class.getDeclaredField("entryFilters");
             field.setAccessible(true);
+            Field hasFilterField = EntryFilterSupport.class.getDeclaredField("hasFilter");
+            hasFilterField.setAccessible(true);
             NarClassLoader narClassLoader = mock(NarClassLoader.class);
             EntryFilter filter1 = new EntryFilterTest();
             EntryFilterWithClassLoader loader1 = spyWithClassAndConstructorArgs(EntryFilterWithClassLoader.class, filter1, narClassLoader);
             EntryFilter filter2 = new EntryFilter2Test();
             EntryFilterWithClassLoader loader2 = spyWithClassAndConstructorArgs(EntryFilterWithClassLoader.class, filter2, narClassLoader);
-            field.set(dispatcher, ImmutableList.of(loader1, loader2));
+            field.set(dispatcher, List.of(loader1, loader2));
+            hasFilterField.set(dispatcher, true);
 
             for (int i = 0; i < 10; i++) {
                 producer.send("test");
@@ -229,6 +340,7 @@ public class FilterEntryTest extends BrokerTestBase {
         Map<String, String> metadataConsumer2 = new HashMap<>();
         metadataConsumer2.put("matchValueAccept", "FOR-2");
         metadataConsumer2.put("matchValueReschedule", "FOR-1");
+        final int numMessages = 200;
 
         try (Producer<String> producer = pulsarClient.newProducer(Schema.STRING)
                 .enableBatching(false).topic(topic).create();
@@ -236,7 +348,7 @@ public class FilterEntryTest extends BrokerTestBase {
                      .subscriptionType(SubscriptionType.Shared)
                      .properties(metadataConsumer1)
                      .consumerName("consumer1")
-                     .receiverQueueSize(5)
+                     .receiverQueueSize(numMessages / 2)
                      .subscriptionName(subName)
                      .subscribe();
              Consumer<String> consumer2 = pulsarClient.newConsumer(Schema.STRING)
@@ -244,7 +356,7 @@ public class FilterEntryTest extends BrokerTestBase {
                      .properties(metadataConsumer2)
                      .consumerName("consumer2")
                      .topic(topic)
-                     .receiverQueueSize(5)
+                     .receiverQueueSize(numMessages / 2)
                      .subscriptionName(subName)
                      .subscribe()) {
 
@@ -252,16 +364,20 @@ public class FilterEntryTest extends BrokerTestBase {
             PersistentSubscription subscription = (PersistentSubscription) pulsar.getBrokerService()
                     .getTopicReference(topic).get().getSubscription(subName);
             Dispatcher dispatcher = subscription.getDispatcher();
-            Field field = AbstractBaseDispatcher.class.getDeclaredField("entryFilters");
+            Field field = EntryFilterSupport.class.getDeclaredField("entryFilters");
             field.setAccessible(true);
+            Field hasFilterField = EntryFilterSupport.class.getDeclaredField("hasFilter");
+            hasFilterField.setAccessible(true);
             NarClassLoader narClassLoader = mock(NarClassLoader.class);
             EntryFilter filter1 = new EntryFilterTest();
-            EntryFilterWithClassLoader loader1 = spyWithClassAndConstructorArgs(EntryFilterWithClassLoader.class, filter1, narClassLoader);
+            EntryFilterWithClassLoader loader1 =
+                    spyWithClassAndConstructorArgs(EntryFilterWithClassLoader.class, filter1, narClassLoader);
             EntryFilter filter2 = new EntryFilterTest();
-            EntryFilterWithClassLoader loader2 = spyWithClassAndConstructorArgs(EntryFilterWithClassLoader.class, filter2, narClassLoader);
-            field.set(dispatcher, ImmutableList.of(loader1, loader2));
+            EntryFilterWithClassLoader loader2 =
+                    spyWithClassAndConstructorArgs(EntryFilterWithClassLoader.class, filter2, narClassLoader);
+            field.set(dispatcher, List.of(loader1, loader2));
+            hasFilterField.set(dispatcher, true);
 
-            int numMessages = 200;
             for (int i = 0; i < numMessages; i++) {
                 if (i % 2 == 0) {
                     producer.newMessage()
@@ -275,30 +391,29 @@ public class FilterEntryTest extends BrokerTestBase {
                             .send();
                 }
             }
-
             CompletableFuture<Void> resultConsume1 = new CompletableFuture<>();
             pulsar.getExecutor().submit(() -> {
-                        try {
-                            // assert that the consumer1 receive all the messages and that such messages
-                            // are for consumer1
-                            int counter = 0;
-                            while (counter < numMessages / 2) {
-                                Message<String> message = consumer1.receive(1, TimeUnit.MINUTES);
-                                if (message != null) {
-                                    log.info("received1 {} - {}", message.getValue(), message.getProperties());
-                                    counter++;
-                                    assertEquals("consumer-1", message.getValue());
-                                    consumer1.acknowledgeAsync(message);
-                                } else {
-                                    resultConsume1.completeExceptionally(
-                                            new Exception("consumer1 did not receive all the messages"));
-                                }
-                            }
-                            resultConsume1.complete(null);
-                        } catch (Throwable err) {
-                            resultConsume1.completeExceptionally(err);
+                try {
+                    // assert that the consumer1 receive all the messages and that such messages
+                    // are for consumer1
+                    int counter = 0;
+                    while (counter < numMessages / 2) {
+                        Message<String> message = consumer1.receive(1, TimeUnit.MINUTES);
+                        if (message != null) {
+                            log.info("received1 {} - {}", message.getValue(), message.getProperties());
+                            counter++;
+                            assertEquals("consumer-1", message.getValue());
+                            consumer1.acknowledgeAsync(message);
+                        } else {
+                            resultConsume1.completeExceptionally(
+                                    new Exception("consumer1 did not receive all the messages"));
                         }
-                    });
+                    }
+                    resultConsume1.complete(null);
+                } catch (Throwable err) {
+                    resultConsume1.completeExceptionally(err);
+                }
+            });
 
             CompletableFuture<Void> resultConsume2 = new CompletableFuture<>();
             pulsar.getExecutor().submit(() -> {
@@ -320,11 +435,32 @@ public class FilterEntryTest extends BrokerTestBase {
                     }
                     resultConsume2.complete(null);
                 } catch (Throwable err) {
-                    resultConsume1.completeExceptionally(err);
+                    resultConsume2.completeExceptionally(err);
                 }
             });
             resultConsume1.get(1, TimeUnit.MINUTES);
             resultConsume2.get(1, TimeUnit.MINUTES);
         }
+    }
+
+
+    private void verifyBacklog(String topic, String subscription,
+                               int numEntries, int numMessages,
+                               int numEntriesAccepted, int numMessagesAccepted,
+                               int numEntriesRejected, int numMessagesRejected,
+                               int numEntriesRescheduled, int numMessagesRescheduled
+                               ) throws Exception {
+        AnalyzeSubscriptionBacklogResult a1
+                = admin.topics().analyzeSubscriptionBacklog(topic, subscription, Optional.empty());
+
+        Assert.assertEquals(numEntries, a1.getEntries());
+        Assert.assertEquals(numEntriesAccepted, a1.getFilterAcceptedEntries());
+        Assert.assertEquals(numEntriesRejected, a1.getFilterRejectedEntries());
+        Assert.assertEquals(numEntriesRescheduled, a1.getFilterRescheduledEntries());
+
+        Assert.assertEquals(numMessages, a1.getMessages());
+        Assert.assertEquals(numMessagesAccepted, a1.getFilterAcceptedMessages());
+        Assert.assertEquals(numMessagesRejected, a1.getFilterRejectedMessages());
+        Assert.assertEquals(numMessagesRescheduled, a1.getFilterRescheduledMessages());
     }
 }
